added bootstrap framework

--- a/src/app.scss
+++ b/src/app.scss
@@ -1,6 +1,7 @@
 body {
   background-color: pink;
   background-image: url(./images/floor.jpg);
+  border: 1px dotted red;
   h3{
     color: yellow;
   }
